[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="illumio_pylo"
description="A set of tools and library for working with Illumio PCE"
requires-python = ">=3.11"
dynamic = ["version", "readme", "dependencies"]
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
version = {attr = "illumio_pylo.__version__"}
dependencies = {file = "requirements.txt"}

[project.urls]
Homepage = "https://github.com/cpainchaud/pylo"
Issues = "https://github.com/cpainchaud/pylo/issues"
